--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <html>
     <head>
         <title>My Website</title>
+        <link type="text/css" href="style.css" rel="stylesheet"/>
     </head>
 
     <body>
+        <div class="navbar">
+            <a class="nav-option" href="index.html">Home</a>
+            <a class="nav-option" href="about.html">About</a>
+            <a class="nav-option" href="about.html">Projects</a>
+        </div>
         <p>Welcome to my Website!</p>
     </body>
 </html>
