added info for pages

--- a/about.html
+++ b/about.html
@@ -4,13 +4,19 @@
         <link type="text/css" href="style.css" rel="stylesheet"/>
     </head>
 
-    <body>
+    <body class = "background">
         <div class="navbar">
             <a class="nav-option" href ="index.html">Home</a>
-            <a class="nav-option" href ="index.html">About</a>
-            <a class="nav-option" href ="index.html">Projects</a>
+            <a class="nav-option" href ="about.html">About</a>
+            <a class="nav-option" href ="projects.html">Projects</a>
         </div>
-        <h1>About Me</h1>
-        <p></p>
+        <h1 class="header">About Me</h1>
+        <div class="container">
+            <p>Hello! My name is Jack Duggan and I am a Junior Computer Science major with a minor in Mathematics at Quinnipiac University. From an early age, I fell in love with technology, especially computers. I would spend a lot of my free time playing around on them and experimenting with different apps and software. It was in highschool when I decided that I want to actually learn about computers, how they work, how to program, etc. So I took a couple of programming classes then I knew this was the career I wanted to enter.
+                I have increased my knowledge drastically after having a few years here at Quinnipiac. Taking courses that deal with many aspects of computers such as: programming languages, computer architecture, data structures, etc.</p>
+            
+            <p>I also have the best Rottweiler a guy could ask for, his name is Tyson. Say Hello!</p>
+            <img class="image" src ="./images/tyson.jpg"/>
+        </div>
     </body>
 </html>
