--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
         <link type="text/css" href="style.css" rel="stylesheet"/>
     </head>
 
-    <body>
+    <body class ="background">
         <div class="navbar">
             <a class="nav-option" href="index.html">Home</a>
             <a class="nav-option" href="about.html">About</a>
-            <a class="nav-option" href="about.html">Projects</a>
+            <a class="nav-option" href="projects.html">Projects</a>
         </div>
-        <p>Welcome to my Website!</p>
+        <div class="container">
+            <h1 class="header">Welcome to my Website!</h1>
+            <p>This is my personal website to descibe a little bit about me and the projects I completed during this semester. On the 'About' page you can find out about me and how my interests in computers began. In the 'Projects' page you can see a short desciption of the projects with a link to their repositories.</p>
+        </div>
     </body>
 </html>
