--- a/projects.html
+++ b/projects.html
@@ -1,13 +1,36 @@
 <html>
     <head>
         <title>Projects</title>
+        <link type="text/css" href="style.css" rel="stylesheet"/>
     </head>
 
-    <body>
+    <body class ="background">
         <div class="navbar">
             <a class="nav-option" href ="index.html">Home</a>
-            <a class="nav-option" href ="index.html">About</a>
-            <a class="nav-option" href ="index.html">Projects</a>
+            <a class="nav-option" href ="about.html">About</a>
+            <a class="nav-option" href ="projects.html">Projects</a>
         </div>
+
+        <h1 class="header">My Projects</h1>
+        <h3>Here are a few GitHub Projects I have created throughout the semester</h3>
+
+        <div class="container">
+            <h3 class="header">Calculator</h3>
+            <p>In this project I made a very simple calculator that takes 2 numbers from a user, and can give them back the sum, difference, product, or quotient of the numbers.</p>
+            <a href="https://github.com/JDugganQuinnipiac/Calculator">Click here to visit the Repository</a>
+        </div>
+
+        <div class="container">
+            <h3 class="header">Animal Picker</h3>
+            <p>In this project I made a simple, yet fun, program that allows the user to pick from a list of animals and shows them ASCII art of their choice</p>
+            <a href="https://github.com/JDugganQuinnipiac/AnimalPicker">Click here to visit the Repository</a>
+        </div>
+
+        <div class="container">
+            <h3 class="header">Vending Machine</h3>
+            <p>In this project I made a program that simulates a Vending Machine. The user is given the selection and prices, and has to insert the proper amount of money in order for the transaction to occur.</p>
+            <a href="https://github.com/JDugganQuinnipiac/Vending-Machine">Click here to visit the Repository</a>
+        </div>
+
     </body>
 </html>
