minor tweaks to wording

--- a/projects.html
+++ b/projects.html
@@ -12,23 +12,23 @@
         </div>
 
         <h1 class="header">My Projects</h1>
-        <h3>Here are a few GitHub Projects I have created throughout the semester</h3>
+        <h3>Here are a few GitHub Projects I have created throughout the semester, All of these were programmed using Java</h3>
 
         <div class="container">
             <h3 class="header">Calculator</h3>
-            <p>In this project I made a very simple calculator that takes 2 numbers from a user, and can give them back the sum, difference, product, or quotient of the numbers.</p>
+            <p>In this project I made a very simple calculator that takes 2 numbers from a user, and can give them back the sum, difference, product, or quotient of the numbers. This was our first actual GitHub assignment so this took some getting used to. Committing and pushing code was somewhat confusing at first.</p>
             <a href="https://github.com/JDugganQuinnipiac/Calculator">Click here to visit the Repository</a>
         </div>
 
         <div class="container">
             <h3 class="header">Animal Picker</h3>
-            <p>In this project I made a simple, yet fun, program that allows the user to pick from a list of animals and shows them ASCII art of their choice</p>
+            <p>In this project I made a simple, yet fun, program that allows the user to pick from a list of animals and shows them ASCII art of their choice. This was a cool program to make and it introduced us to collaborators in GitHub. We had to find a partner to add to their repository as well as have them add to ours.</p>
             <a href="https://github.com/JDugganQuinnipiac/AnimalPicker">Click here to visit the Repository</a>
         </div>
 
         <div class="container">
             <h3 class="header">Vending Machine</h3>
-            <p>In this project I made a program that simulates a Vending Machine. The user is given the selection and prices, and has to insert the proper amount of money in order for the transaction to occur.</p>
+            <p>In this project I made a program that simulates a Vending Machine. The user is given the selection and prices, and has to insert the proper amount of money in order for the transaction to occur.I feel like this project went the smoothest since we had been getting used to GitHub for a few weeks now so it was cool to be able to know what I'm doing instead of just following direction blindly.</p>
             <a href="https://github.com/JDugganQuinnipiac/Vending-Machine">Click here to visit the Repository</a>
         </div>
 
